--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p>The Emperor of own World</p>
   <div style="margin: 24px 0;">
       <div class="icons">
-    <a href=""><i class="fa fa-telegram"></i></a>  
+    <a href="https://t.me/Mdsohan_19i/"><i class="fa fa-telegram"></i></a>  
     <a href="https://www.facebook.com/SohanAhmed.XXi"><i class="fa fa-facebook"></i></a>
     <a href="https://wa.me/+8801575440114" target="_blank"><i class="fa fa-whatsapp"></i></a>
     
