--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 "Success isn't final, failure isn't fatal; it's the courage to keep going that matters."
             </blockquote>
         </section>
-        <a href="https://raw.githubusercontent.com/ibnc-r/Resources/refs/heads/main/SOHAN.vcf" 
+        <a href="SOHAN.vcf" 
            download="MD SOHAN AHMED.vcf" 
            class="save-contact-btn" 
            data-aos="fade-up">
