--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
                 <li class="info-item"><i class="fas fa-user-graduate"></i>Profession: Student Nurse</li>
                 <li class="info-item"><i class="fas fa-map-marker-alt"></i>Charghat, Rajshahi, Bangladesh</li>
                 <li class="info-item"><i class="fas fa-birthday-cake"></i> 13-07-2005 </li>
+                <li class="info-item"><i class="fas fa-medkit"></i> AB+ (ve) </li>
             </ul>
         </header>
         <section class="about" data-aos="fade-right">
