--- a/index.html
+++ b/index.html
@@ -455,7 +455,8 @@
             <div class="link-list">
                 <a href="https://www.facebook.com/share/1THALqJNg9/" class="link-btn" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i> Facebook</a>
                 <a href="https://www.instagram.com/md.sohan.ahmed.3158?igsh=MWk1MDVtcDA0ZGRkMA==" class="link-btn" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i> Instagram</a>
-                <a href="#" class="link-btn" target="_blank" rel="noopener noreferrer"><i class="fab fa-x-twitter"></i> X (Treats)</a>
+                <a href="https://www.threads.com/@md.sohan.ahmed.3158" class="link-btn" target="_blank" rel="noopener noreferrer"><i class="fab fa-x-twitter"></i> X (Treats)</a>
+                <a href="https://t.me/Mdsohan_19i" class="link-btn" target="_blank" rel="noopener noreferrer"><i class="fab fa-telegram-plane"></i> Telegram</a>
             </div>
         </section>
         <section class="hobbies" data-aos="fade-left">
